// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConvertingProgress should render with correct progress with 0% done 1`] = `
<div>
  <div
    class="sc-aXZVg jRVSTR"
    data-mocked="Container"
    data-testid="progress-container"
  >
    <div
      data-mocked="ProgressBar"
      label="Converting nodes"
      status="in-progress"
      value="0"
    >
      <div>
        <div
          class="sc-gEvEer jzVSqD"
          data-mocked="Box"
        >
          0 out of 10 converted
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConvertingProgress should render with correct progress with all done 1`] = `
<div>
  <div
    class="sc-aXZVg jRVSTR"
    data-mocked="Container"
    data-testid="progress-container"
  >
    <div
      data-mocked="ProgressBar"
      label="Converting nodes"
      status="in-progress"
      value="100"
    >
      <div>
        <div
          class="sc-gEvEer jzVSqD"
          data-mocked="Box"
        >
          10 out of 10 converted
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConvertingProgress should render with correct progress with partially done 1`] = `
<div>
  <div
    class="sc-aXZVg jRVSTR"
    data-mocked="Container"
    data-testid="progress-container"
  >
    <div
      data-mocked="ProgressBar"
      label="Converting nodes"
      status="in-progress"
      value="22.22222222222222"
    >
      <div>
        <div
          class="sc-gEvEer jzVSqD"
          data-mocked="Box"
        >
          2 out of 9 converted
        </div>
      </div>
    </div>
  </div>
</div>
`;
